--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,6 +17,7 @@ $light-border-color:#ccc;
 $grey-border-color:#999;
 $dark-border-color:#555;
 
+$disabled-text-color:#888;
 $inactive-text-color:#555;
 $active-text-color:#000;
 
