--- a/scss/_backgroundEditor.scss
+++ b/scss/_backgroundEditor.scss
@@ -6,12 +6,46 @@
 	border-radius: 5px;
 	min-height:38px;
 }
+.bg_color_editor{
+	.bg_color_meta_info{
+		@extend .meta_info;
+		font-weight: normal;
+		display:inline-block;
+		box-sizing: border-box;
+		padding-left: 5px;
+		margin-right:5px;
+		//width:$bg_url_meta_info_width;
+	}
+
+	.bg_color_editor_input{
+		display:inline-block;
+		box-sizing: border-box;
+		width:unset;
+		min-width: 30px;
+		//width:$bg_url_meta_info_width;
+	}
+}
+
+.bg_url_editor{
+	//$bg_url_meta_info_width:115px;
+
+	.bg_url_editor_input{
+		$margin_left:5px;
+		$margin_right:5px;
+		margin:0 $margin_right 0 $margin_left ;
+		display:inline-block;
+		box-sizing: border-box;
+		//width:calc(100% - #{$bg_url_meta_info_width + $margin_left + $margin_right});
+		width:calc(100% - #{$margin_left + $margin_right});
+	}
+}
 
 .bg_editor_preview {
 	border:1px solid $dark-border-color;
 	border-radius: 3px;
 	margin:5px;
 	padding:10px;
+	min-height: 120px;
 	text-align:center;
 	vertical-align:center;
 }
