--- a/scss/_slide.scss
+++ b/scss/_slide.scss
@@ -74,7 +74,7 @@ input.headline_input {
 }
 
 .slide_right {
-    &>div {
+    /*>div {
         display: block;
         width: 100%;
 
@@ -87,7 +87,7 @@ input.headline_input {
         input[type="checkbox"] {
             width: auto;
         }
-    }
+    }*/
     &>.quill {
         border:1px solid $light-border-color;
         border-radius: 5px;
