--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'select';
 @import 'topnav';
 @import 'backgroundEditor';
+@import 'dateEditor';
 @import 'popup/popup';
 @import 'popup/preview';
 @import 'common/enable';
