client.scss: cleanup
* js : stub on dateEditor

--- a/scss/_dateEditor.scss
+++ b/scss/_dateEditor.scss
@@ -2,3 +2,10 @@
     border:1px solid $light-border-color;
     border-radius: 5px;
 }
+
+.date_editor_meta_switch {
+    float:right;
+    margin: 5px;
+}
+
+//
