--- a/scss/common/_enable.scss
+++ b/scss/common/_enable.scss
@@ -1,13 +1,11 @@
-@import "../button";
-@import "../vars";
-.enable_button {
-	@extend .button;
-}
-
 .enable_button_enabled {
 
 }
 
 .enable_button_disabled {
-	color:$disabled-text-color;
+	color:$disabled-text-color !important;
+}
+
+.enable_button {
+	@extend .button;
 }
