--- a/scss/_dateEditor.scss
+++ b/scss/_dateEditor.scss
@@ -1,11 +1,32 @@
 .date_editor{
     border:1px solid $light-border-color;
     border-radius: 5px;
+
+    .date_editor_meta_info {
+        @extend .meta_info;
+		font-weight: normal;
+		display:inline-block;
+		box-sizing: border-box;
+		padding-left: 5px;
+		margin-right:5px;
+    }
+}
+
+.date_editor_begin_date {
+    &>div{
+        display:inline-block;
+    }
 }
 
 .date_editor_meta_switch {
+    @extend .button;
     float:right;
     margin: 5px;
 }
+
+.date_editor_pikaday{
+    width: 30% !important;
+}
+
 
 //
