--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,9 @@
 @import 'select';
 @import 'topnav';
 @import 'popup/popup';
+@import 'popup/export';
 @import 'popup/preview';
+@import 'popup/parameters';
 @import 'dateEditor';
 @import 'backgroundEditor';
 
