client: Password change is complete

--- a/scss/popup/_parameters.scss
+++ b/scss/popup/_parameters.scss
@@ -1,4 +1,10 @@
 
 .parameters_popup{
-    @extend .popup;
+    @extend .popup, .small;
+
+    input{
+        font-size:1.1em;
+        width:100%;
+        box-sizing: border-box;
+    }
 }
