--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'popup/export';
 @import 'popup/preview';
 @import 'popup/parameters';
+@import 'popup/help';
 @import 'dateEditor';
 @import 'backgroundEditor';
 
